Don't hang when the wallet service is completely disabled.

This apparently is different than just denying the resource access to
the wallet.

BUG: 279228